resolves #913 story tags for enabling and disabling bot
- added tags to story definition configuration
- add UI for setting story tags
- show tagged story in story rules tab
- wire tagged stories to enable and disable actions
- add mat-card in story settings
- respond before disabling in the case of tagged stories

--- a/bot/admin/web/src/app/bot/story/search-story.component.html
+++ b/bot/admin/web/src/app/bot/story/search-story.component.html
@@ -57,6 +57,6 @@
   </nb-card-footer>
 </nb-card>
 <mat-accordion *ngIf="stories">
-  <tock-story *ngFor="let s of stories" [story]="s" (delete)="delete($event)"
+  <tock-story *ngFor="let s of stories" [storyTag]="s.getFirstTag()" [story]="s" (delete)="delete($event)"
               [fullDisplay]="true" [displaySteps]="true" (close)="search(s)"></tock-story>
 </mat-accordion>
