--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -145,7 +145,9 @@
                        matTooltip="Display Recursive Transitions from each Node to itself">Recursive Transitions</nb-checkbox>
         </span>
         <nb-checkbox [(ngModel)]="displayNodeType" (change)="updateCount()" class="checkbox"
-                     matTooltip="Display Story-Type icon on each Node label">Story Types</nb-checkbox>
+                     matTooltip="Display Story Type icon on each Node">Story Types</nb-checkbox>
+        <nb-checkbox *ngIf="!statsMode" [(ngModel)]="intent" (change)="updateCount()" class="checkbox"
+                     matTooltip="Display Story Main Intent on each Node">Main Intents</nb-checkbox>
         <nb-checkbox [(ngModel)]="displayDebug" class="checkbox"
                      matTooltip="Display Debug stats">Debug</nb-checkbox>
         <span *ngIf="displayDebug">
