fixes #902 Bot Flow: fetch flow by connector id + allow 'all configs' (default)
- 'all configs' is now the selection by default
- selecting a config name automatically selects the first connector/config id
- test config not included anymore (previously included because same config name)

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -40,10 +40,10 @@
       <br />
 
       <div class="flow-option-group">
-        <span class="flow-option-group-name">Scope:</span>
-        <tock-select-bot [(configurationId)]="botConfigurationId"
-                         [allowNoConfigurationSelection]="true"
-                         (selectionChange)="displayFlow($event)" class="select">
+        <span class="flow-option-group-name">{{ statsMode ? "Scope:" : "Scope / Filters:"}}</span>
+        <tock-select-bot [allowNoConfigurationSelection]="false" noConnectorLabel="All Connectors"
+                         [allowNoSelection]="true" noConfigurationLabel="All Configurations"
+                         (selectionChange)="selectedConfigurationChanged($event)" class="select">
         </tock-select-bot>
         <span class="select">
           <nb-select placeholder="Story Type" status="primary" [(ngModel)]="selectedTypeFilter"
