resolves #909 Bot Flow: option include/hide disabled stories (static)
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -112,6 +112,9 @@
           <nb-checkbox [(ngModel)]="step" (change)="update()" class="checkbox" matTooltip="View more Nodes by Step">Step</nb-checkbox>
           <nb-checkbox [(ngModel)]="intent" (change)="update()" class="checkbox" matTooltip="View more Nodes by Intent">Intent</nb-checkbox>
         </span>
+        <span *ngIf="!statsMode">
+          <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" matTooltip="Include Stories Disabled by Rules">Disabled</nb-checkbox>
+        </span>
       </div>
 
       <div class="flow-option-group" *ngIf="statsMode">
