--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -42,7 +42,7 @@
       <div class="flow-option-group">
         <span class="flow-option-group-name">{{ statsMode ? "Scope:" : "Scope / Filters:"}}</span>
         <tock-select-bot [allowNoConfigurationSelection]="false" noConnectorLabel="All Connectors"
-                         [allowNoSelection]="true" noConfigurationLabel="All Configurations"
+                         [allowNoSelection]="allowSelectAllConfigs" noConfigurationLabel="All Configurations"
                          (selectionChange)="selectedConfigurationChanged($event)" class="select">
         </tock-select-bot>
         <span class="select">
@@ -114,6 +114,8 @@
         </span>
         <span *ngIf="!statsMode">
           <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" matTooltip="Include Stories Disabled by Rules">Disabled</nb-checkbox>
+          <nb-checkbox [(ngModel)]="allowSelectAllConfigs" class="checkbox" (change)="changeAllowSelectAllConfigs()"
+                       matTooltip="Allow Selection of All Configurations (possible performance impact)">Allow <em>All Configurations</em></nb-checkbox>
         </span>
       </div>
 
@@ -136,6 +138,10 @@
         <span>
           <nb-checkbox [(ngModel)]="mergeOldStories" (change)="update()" class="checkbox"
                        matTooltip="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
+        </span>
+        <span>
+          <nb-checkbox [(ngModel)]="allowSelectAllConfigs" class="checkbox" (change)="changeAllowSelectAllConfigs()"
+                       matTooltip="Allow Selection of All Configurations (possible performance impact)">Allow <em>All Configurations</em></nb-checkbox>
         </span>
       </div>
 
