fixes #839 icon should refresh when 'Manage story' cancelled
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -115,7 +115,7 @@
   </div>
   <mat-action-row *ngIf="storyNode || story._id">
     <button *ngIf="!story._id" (click)="saveNewStory()" mat-raised-button color="primary">Create Story</button>
-    <button *ngIf="story._id" (click)="expansionPanel.close();" mat-button>Cancel</button>
+    <button *ngIf="story._id" (click)="cancelManagingStory();expansionPanel.close();" mat-button>Cancel</button>
     <button *ngIf="story._id && !story.isBuiltIn()" (click)="saveStory(false);expansionPanel.close();submitClose();"
             mat-raised-button
             color="primary">Update Story
