--- a/bot/admin/web/src/app/bot/story/story-tag.component.html
+++ b/bot/admin/web/src/app/bot/story/story-tag.component.html
@@ -17,7 +17,8 @@
 <div class="story-tag">
   <mat-form-field>
     <mat-label>Tag :</mat-label>
-    <mat-select [(ngModel)]="selectedTag" (ngModelChange)="selectedTagChange.emit($event)" name="storyTag" disableRipple>
+    <mat-select [(ngModel)]="selectedTag" (ngModelChange)="selectedTagChange.emit($event)" name="storyTag" disableRipple panelClass="story-select">
+      <mat-option value="">None</mat-option>
       <mat-option *ngFor="let tag of tags" [value]="tag.value">
         {{tag.viewValue}}
       </mat-option>
