--- a/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
@@ -15,112 +15,154 @@
   -->
 
 <div class="i18n-label" *ngIf="i.i18n.length !== 0">
-  <div class="i18n-label__title">
-    <span class="i18n-label__title__label" matTooltip="key:{{i._id}}">{{i.defaultLocalizedLabel().label.length === 0 ? i._id : i.defaultLocalizedLabel().label}}</span>
 
-    <span class="i18n-label__title__intent">{{intent}}</span>
+  <mat-card>
+    <div class="i18n-label__title">
+      <span class="i18n-label__title__label"
+            matTooltip="key:{{i._id}}">{{i.defaultLocalizedLabel().label.length === 0 ? i._id : i.defaultLocalizedLabel().label}}</span>
 
-    <span *ngIf="i.defaultLocalizedLabel().label !== i.defaultLabel" class="i18n-label__title__original_label" matTooltip="Original Label">{{i.defaultLabel}}</span>
+      <span class="i18n-label__title__intent">{{intent}}</span>
 
-    <button class="i18n-label__title__delete" *ngIf="deleteAllowed" mat-button (click)="deleteLabel(i)"
-            matTooltip="Delete Label" color="warn">
-      delete
-    </button>
+      <span *ngIf="i.defaultLocalizedLabel().label !== i.defaultLabel" class="i18n-label__title__original_label"
+            matTooltip="Original Label">{{i.defaultLabel}}</span>
 
-    <span class="i18n-label__title__usage">
-      <span *ngIf="i.statCount">used {{ i.statCount }} times,</span>
-      <span *ngIf="i.lastUpdate">last used {{ i.lastUpdate | amTimeAgo }}</span>
-    </span>
-  </div>
-
-  <div class="i18n-label__entry i18n-label__entry--language-{{l.locale}} i18n-label__entry--mode-{{l.interfaceType}}"
-       *ngFor="let l of i.i18n; let isLast = last; let index = index">
-    <div class="i18n-label__entry__locale" title="{{l.displayStats()}}">{{l.locale}}</div>
-
-    <div class="i18n-label__entry__mode">
-      <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 0" mat-list-avatar>chat</mat-icon>
-      <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 1" mat-list-avatar>record_voice_over</mat-icon>
-    </div>
-
-    <div class="i18n-label__entry__connector" *ngIf="l.connectorId">
-      <img *ngIf="l.connectorId"
-           src="{{l.iconUrl()}}"
-           class="i18n-label__entry__connector__img"
-           [matTooltip]="l.connectorId"/>
-    </div>
-
-    <div class="i18n-label__entry__input">
-      <textarea class="i18n-label__entry__input__textarea"
-                nbInput rows="1"
-                [(ngModel)]="l.label"
-                (change)="save(i)"
-                [title]="l.stats && l.stats.length !== 0 ? ('used '+ l.mergedStats().count +' times, last used ' + (l.mergedStats().lastUpdate | amTimeAgo)) : 'No stats'"></textarea>
-    </div>
-
-    <div class="i18n-label__entry__alternative-management">
-      <button class="i18n-label__entry__alternatives__button" mat-button (click)="addNewAlternative(l)">
-        <mat-icon>add</mat-icon>
-        Add an alternative
+      <button class="i18n-label__title__delete" *ngIf="deleteAllowed" mat-button (click)="deleteLabel(i)"
+              matTooltip="Delete Label" color="warn">
+        Delete
       </button>
-    </div>
 
-    <div class="i18n-label__entry__validation">
-      <nb-checkbox [(ngModel)]="l.validated" (change)="save(i)"></nb-checkbox>
-    </div>
-
-    <div class="i18n-label__entry__delete">
-      <button *ngIf="deleteAllowed" mat-button (click)="removeLocalizedLabel(i, l)" matTooltip="Delete Label"
-              color="warn">
-        <mat-icon>delete_forever</mat-icon>
-      </button>
-    </div>
-
-    <div class="i18n-label__entry__alternatives" *ngFor="let a of l.alternatives;let index=index;">
-      <div class="i18n-label__entry__locale">{{l.locale}}</div>
-
-      <div class="i18n-label__entry__mode">
-        <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 0" mat-list-avatar>chat</mat-icon>
-        <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 1" mat-list-avatar>record_voice_over
-        </mat-icon>
-      </div>
-
-      <div class="i18n-label__entry__connector" *ngIf="l.connectorId">
-        <img *ngIf="l.connectorId"
-             src="{{l.iconUrl()}}"
-             class="i18n-label__entry__connector__img"
-             [matTooltip]="l.connectorId"/>
-      </div>
-
-      <div class="i18n-label__entry__input">
-        <textarea class="i18n-label__entry__input__textarea"
-                  matInput
-                  [value]="a"
-                  (change)="addAlternative(i, l, index, $event.target.value)"
-                  cols="90"
-                  rows="1"></textarea>
-      </div>
-
-      <div class="i18n-label__entry__alternative-management">
-        <button class="i18n-label__entry__alternatives__button" mat-button (click)="removeAlternative(i, l, index)">
-          <mat-icon>remove</mat-icon>
-          Remove alternative
-        </button>
-      </div>
-    </div>
-
-    <div class="i18n-label__entry__connectors"
-         *ngIf="isLast || i.i18n[index + 1].interfaceType !== l.interfaceType || i.i18n[index + 1].locale !== l.locale">
-      <span *ngFor="let connector of connectorTypes">
-          <button *ngIf="!i.hasLocaleAndInterfaceAndConnector(l.locale, l.interfaceType, connector.connectorType.id)" mat-icon-button
-                  (click)="addLocalizedLabelForConnector(i, l, connector.connectorType.id)" matTooltip="Clear localized label"
-                  color="warn">
-            <img
-              src="{{connector.connectorType.iconUrl()}}"
-              class="connector"
-              matTooltip="Add specific label for connector {{connector.connectorType.id}}"/>
-
-          </button>
+      <span class="i18n-label__title__usage">
+        <span *ngIf="i.statCount">used {{ i.statCount }} times,</span>
+        <span *ngIf="i.lastUpdate">last used {{ i.lastUpdate | amTimeAgo }}</span>
       </span>
     </div>
-  </div>
+
+
+    <mat-card-content>
+      <div
+        class="i18n-label__entry i18n-label__entry--language-{{l.locale}} i18n-label__entry--mode-{{l.interfaceType}}"
+        *ngFor="let l of i.i18n; let isLast = last; let index = index">
+
+        <div class="i18n-label__entry__label_details">
+          <!-- Locale -->
+          <div class="i18n-label__entry__locale" title="{{l.displayStats()}}">{{l.locale}}</div>
+
+          <!-- Interface type -->
+          <div class="i18n-label__entry__mode">
+            <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 0" mat-list-avatar>chat
+            </mat-icon>
+            <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 1" mat-list-avatar>
+              record_voice_over
+            </mat-icon>
+          </div>
+
+          <!-- Connector -->
+          <div class="i18n-label__entry__connector" *ngIf="l.connectorId">
+            <img *ngIf="l.connectorId"
+                 src="{{l.iconUrl()}}"
+                 class="i18n-label__entry__connector__img"
+                 [matTooltip]="l.connectorId"/>
+          </div>
+        </div>
+
+        <!-- Label -->
+        <div class="i18n-label__entry__input">
+          <textarea class="i18n-label__entry__input__textarea"
+                    nbInput rows="1"
+                    [(ngModel)]="l.label"
+                    (change)="save(i)"
+                    [title]="l.stats && l.stats.length !== 0 ? ('used '+ l.mergedStats().count +' times, last used ' + (l.mergedStats().lastUpdate | amTimeAgo)) : 'No stats'"></textarea>
+        </div>
+
+        <div class="i18n-label__entry__actions">
+          <!-- Add alternative -->
+          <div class="i18n-label__entry__alternative-management">
+            <button class="i18n-label__entry__alternatives__button"
+                    mat-icon-button
+                    matTooltip="Add an alternative"
+                    (click)="addNewAlternative(l)">
+              <mat-icon>add</mat-icon>
+            </button>
+          </div>
+
+          <!-- Delete label -->
+          <div class="i18n-label__entry__delete">
+            <button *ngIf="deleteAllowed"
+                    (click)="removeLocalizedLabel(i, l)"
+                    mat-icon-button
+                    matTooltip="Delete Label"
+                    color="warn">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+          </div>
+
+          <!-- Validate label -->
+          <div class="i18n-label__entry__validation">
+            <nb-checkbox [(ngModel)]="l.validated" (change)="save(i)" nbTooltip="Validate label"></nb-checkbox>
+          </div>
+        </div>
+
+        <!-- Alternatives -->
+        <div class="i18n-label__entry__alternatives" *ngFor="let a of l.alternatives;let index=index;">
+
+          <div class="i18n-label__entry__label_details">
+            <div class="i18n-label__entry__locale">{{l.locale}}</div>
+
+            <div class="i18n-label__entry__mode">
+              <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 0" mat-list-avatar>chat
+              </mat-icon>
+              <mat-icon class="i18n-label__entry__mode__icon" *ngIf="l.interfaceType === 1" mat-list-avatar>
+                record_voice_over
+              </mat-icon>
+            </div>
+
+            <div class="i18n-label__entry__connector" *ngIf="l.connectorId">
+              <img *ngIf="l.connectorId"
+                   src="{{l.iconUrl()}}"
+                   class="i18n-label__entry__connector__img"
+                   [matTooltip]="l.connectorId"/>
+            </div>
+          </div>
+
+          <div class="i18n-label__entry__input">
+            <textarea class="i18n-label__entry__input__textarea i18n-label__entry__textarea_alternative"
+                      nbInput
+                      [value]="a"
+                      (change)="addAlternative(i, l, index, $event.target.value)"
+                      rows="1"></textarea>
+          </div>
+
+          <div class="i18n-label__entry__actions">
+            <!-- Remove alternative -->
+            <div class="i18n-label__entry__alternative-management remove_alternative">
+              <button class="i18n-label__entry__alternatives__button" mat-icon-button matTooltip="Remove alternative"
+                      (click)="removeAlternative(i, l, index)">
+                <mat-icon>remove</mat-icon>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Add specific label for connector -->
+        <div class="i18n-label__entry__connectors"
+             *ngIf="isLast || i.i18n[index + 1].interfaceType !== l.interfaceType || i.i18n[index + 1].locale !== l.locale">
+          <div class="i18n-label__entry__connector_container">
+            <span *ngFor="let connector of connectorTypes">
+              <!-- Connectors buttons -->
+              <mat-action-list class="i18n-label__entry__connector-list">
+              <button
+                *ngIf="!i.hasLocaleAndInterfaceAndConnector(l.locale, l.interfaceType, connector.connectorType.id)"
+                (click)="addLocalizedLabelForConnector(i, l, connector.connectorType.id)"
+                matTooltip="Add specific label for connector {{connector.connectorType.id}}"
+                mat-list-item>
+                 <img src="{{connector.connectorType.iconUrl()}}" class="i18n-label__entry__connector__img"/>
+              </button>
+              </mat-action-list>
+            </span>
+          </div>
+          <mat-divider *ngIf="!isLast"></mat-divider>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
