resolves #849 user namespaces: add a way to create new namespace
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/namespace/namespaces.component.css
+++ b/nlp/admin/web/src/app/applications/namespace/namespaces.component.css
@@ -17,6 +17,16 @@
   margin-top:20px;
 }
 
+.create {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.create-item {
+  margin: 10px;
+}
+
 .applications-applications__item {
   display: flex;
   align-items: center;
