resolves #969 Bot Flow: time filter
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.css
+++ b/bot/admin/web/src/app/bot/flow/flow.component.css
@@ -115,6 +115,11 @@ tock-cytoscape {
   min-width: 150px;
 }
 
+.flow-option-label {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .flow-stat {
   font-size: small;
   font-style: italic;
