--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -18,23 +18,24 @@
   <nb-accordion-item #accordion>
     <nb-accordion-item-header>
       Bot Flow
-      <span *ngIf="statsMode" class="status status-header statsMode-badge statsMode-true" matTooltip="Dynamic mode (user flow)">Dynamic</span>
-      <span *ngIf="!statsMode" class="status status-header statsMode-badge statsMode-false" matTooltip="Static mode (available stories)">Static</span>
-      <mat-icon *ngIf="accordion.collapsed" matTooltip="Show options">expand_more</mat-icon>
-      <mat-icon *ngIf="!accordion.collapsed" matTooltip="Hide options">expand_less</mat-icon>
+      <span *ngIf="statsMode" class="status status-header statsMode-badge statsMode-true" title="Dynamic mode (user flow)">Dynamic</span>
+      <span *ngIf="!statsMode" class="status status-header statsMode-badge statsMode-false" title="Static mode (available stories)">Static</span>
+      <mat-icon *ngIf="accordion.collapsed" title="Show options">expand_more</mat-icon>
+      <mat-icon *ngIf="!accordion.collapsed" title="Hide options">expand_less</mat-icon>
     </nb-accordion-item-header>
     <nb-accordion-item-body>
 
       <div class="flow-option-group">
-        <span class="flow-option-group-name">Switch Mode:</span>
+        <span class="flow-option-group-name">Mode:</span>
+        <span class="flow-option-label" title="Show available stories (static mode)">Available stories</span>
         <mat-slide-toggle
           [(ngModel)]="statsMode"
           class="mode-selection"
           color="primary"
           (change)="changeMode()">
-            <span *ngIf="statsMode">effective user flow (dynamic)</span>
-            <span *ngIf="!statsMode">available stories (static)</span>
         </mat-slide-toggle>
+        <span class="flow-option-label" title="Show effective user trafic (dynamic mode)">User flow on</span>
+        <date-range-calendar [disabled]="!statsMode" [rangeInDays]="90" (datesChanged)="datesChanged($event)"></date-range-calendar>
       </div>
 
       <br />
@@ -71,9 +72,9 @@
             <nb-option [value]="undefined">All</nb-option>
             <nb-option *ngFor="let entry of storiesById | keyvalue" [value]="entry.value"
                        [disabled]="!selectedTypeFilter.filter(entry.value)">
-              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" matTooltip="BuiltIn">build</mat-icon>
-              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" matTooltip="Message">message</mat-icon>
-              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" matTooltip="Script">code</mat-icon>
+              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" title="BuiltIn">build</mat-icon>
+              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" title="Message">message</mat-icon>
+              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" title="Script">code</mat-icon>
               {{entry.value.name}}
             </nb-option>
           </nb-select>
@@ -91,10 +92,10 @@
             <nb-option [value]="undefined">All</nb-option>
             <nb-option *ngFor="let entry of nodesById | keyvalue" [value]="entry.value"
                        [disabled]="!selectedTypeFilter.filter(entry.value)">
-              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" matTooltip="BuiltIn">build</mat-icon>
-              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" matTooltip="Message">message</mat-icon>
-              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" matTooltip="Script">code</mat-icon>
-              <mat-icon *ngIf="entry.value.storyType == undefined" class="story-type" matTooltip="Unknown Type">help_outline</mat-icon>
+              <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" title="BuiltIn">build</mat-icon>
+              <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" title="Message">message</mat-icon>
+              <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" title="Script">code</mat-icon>
+              <mat-icon *ngIf="entry.value.storyType == undefined" class="story-type" title="Unknown Type">help_outline</mat-icon>
               {{entry.value.storyName}}
             </nb-option>
           </nb-select>
@@ -108,12 +109,12 @@
         </span>
         &nbsp;&nbsp;
         <span *ngIf="statsMode">
-          <nb-checkbox [(ngModel)]="entity" (change)="update()" class="checkbox" matTooltip="View more Nodes by Entity values">Entity</nb-checkbox>
-          <nb-checkbox [(ngModel)]="step" (change)="update()" class="checkbox" matTooltip="View more Nodes by Step">Step</nb-checkbox>
-          <nb-checkbox [(ngModel)]="intent" (change)="update()" class="checkbox" matTooltip="View more Nodes by Intent">Intent</nb-checkbox>
+          <nb-checkbox [(ngModel)]="entity" (change)="update()" class="checkbox" title="View more Nodes by Entity values">Entity</nb-checkbox>
+          <nb-checkbox [(ngModel)]="step" (change)="update()" class="checkbox" title="View more Nodes by Step">Step</nb-checkbox>
+          <nb-checkbox [(ngModel)]="intent" (change)="update()" class="checkbox" title="View more Nodes by Intent">Intent</nb-checkbox>
         </span>
         <span *ngIf="!statsMode">
-          <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" matTooltip="Include Stories Disabled by Rules">Disabled</nb-checkbox>
+          <nb-checkbox [(ngModel)]="displayDisabled" (change)="update()" class="checkbox" title="Include Stories Disabled by Rules">Disabled</nb-checkbox>
           <nb-checkbox [(ngModel)]="allowSelectAllConfigs" class="checkbox" (change)="changeAllowSelectAllConfigs()"
                        matTooltip="Allow Selection of All Configurations (possible performance impact)">Allow <em>All Configurations</em></nb-checkbox>
         </span>
@@ -122,26 +123,26 @@
       <div class="flow-option-group" *ngIf="statsMode">
         <span class="flow-option-group-name">Filters:</span>
         <span>
-          <span matTooltip="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
+          <span class="flow-option-label" title="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
           <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalNodeCount" [max]="maxNodeCount"
                       (change)="updateCount()"></mat-slider>
         </span>
         <span>
-          <span matTooltip="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
+          <span class="flow-option-label" title="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
           <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalTransitionPercentage"
                       (change)="updateCount()"></mat-slider>
         </span>
         <span>
           <nb-checkbox [(ngModel)]="displayTests" (change)="reload()" class="checkbox"
-                       matTooltip="Include Test Flow">Tests</nb-checkbox>
+                       title="Include Test Flow">Tests</nb-checkbox>
         </span>
         <span>
           <nb-checkbox [(ngModel)]="mergeOldStories" (change)="update()" class="checkbox"
-                       matTooltip="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
+                       title="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
         </span>
         <span>
           <nb-checkbox [(ngModel)]="allowSelectAllConfigs" class="checkbox" (change)="changeAllowSelectAllConfigs()"
-                       matTooltip="Allow Selection of All Configurations (possible performance impact)">Allow <em>All Configurations</em></nb-checkbox>
+                       title="Allow Selection of All Configurations (possible performance impact)">Allow <em>All Configurations</em></nb-checkbox>
         </span>
       </div>
 
@@ -155,14 +156,14 @@
         </span>
         <span *ngIf="statsMode">
           <nb-checkbox [(ngModel)]="recursive" (change)="update()" class="checkbox"
-                       matTooltip="Display Recursive Transitions from each Node to itself">Recursive Transitions</nb-checkbox>
+                       title="Display Recursive Transitions from each Node to itself">Recursive Transitions</nb-checkbox>
         </span>
         <nb-checkbox [(ngModel)]="displayNodeType" (change)="updateCount()" class="checkbox"
-                     matTooltip="Display Story Type icon on each Node">Story Types</nb-checkbox>
+                     title="Display Story Type icon on each Node">Story Types</nb-checkbox>
         <nb-checkbox *ngIf="!statsMode" [(ngModel)]="intent" (change)="updateCount()" class="checkbox"
-                     matTooltip="Display Story Main Intent on each Node">Main Intents</nb-checkbox>
+                     title="Display Story Main Intent on each Node">Main Intents</nb-checkbox>
         <nb-checkbox [(ngModel)]="displayDebug" class="checkbox"
-                     matTooltip="Display Debug stats">Debug</nb-checkbox>
+                     title="Display Debug stats">Debug</nb-checkbox>
         <span *ngIf="displayDebug">
           <span class="flow-stat" *ngIf="nodesById || storiesById">
             Total Stories: {{ statsMode ? nodesById.size : storiesById.size }}
