Analytics: normalize calendar datetimes (0:00 to 23:59)
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.html
@@ -11,6 +11,7 @@
     <button nbButton size="small" [status]="getStatus(14)" (click)="setRangeInDays(14)">Last 14 days</button>
     <button nbButton size="small" [status]="getStatus(30)" (click)="setRangeInDays(30)">Last 30 days</button>
     <button nbButton size="small" [status]="getStatus(90)" (click)="setRangeInDays(90)">Last 90 days</button>
+    <button nbButton size="small" [status]="getStatus(180)" (click)="setRangeInDays(180)">Last 180 days</button>
   </div>
   <nb-calendar-range [(range)]="range"></nb-calendar-range>
   <button nbButton size="small" status="basic" (click)="update()">Update</button>
