Analytics: improve calendar
- Cleanup CSS
- Cancel feature

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
+++ b/bot/admin/web/src/app/shared/date-range/date-range-calendar.component.css
@@ -1,5 +1,23 @@
-.calendar {
+.calendar-panel {
   z-index: 10000;
   display: flex;
+  flex-direction: column;
   position: fixed;
+}
+
+.calendar-body {
+  display: flex;
+  flex-direction: row;
+}
+
+.calendar-shortcuts {
+  display: inline-grid;
+  width: -webkit-fill-available;
+  height: fit-content;
+}
+
+.calendar-controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
